// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkerDetails
    marker={
      Object {
        "coordinates": Object {
          "latitude": 55.5,
          "longitude": 11.1,
        },
        "description": "desc",
        "id": "123",
        "title": "title",
      }
    }
    onClose={[MockFunction]}
    onRemove={[MockFunction]}
    onSetAsTarget={[MockFunction]}
    onSetAsWaypoint={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Component
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <Button
            iconName="arrow-back"
            onPress={[MockFunction]}
          />
        </Component>
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 5,
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="place"
                size={14}
              />
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              title
            </Text>
          </Component>
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 10,
                }
              }
            >
              desc
            </Text>
          </Component>
        </Component>
        <Component
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Button
            iconName="directions"
            onPress={[Function]}
            outline={true}
          />
          <Button
            iconName="location-off"
            onPress={[Function]}
            outline={true}
          />
        </Component>
      </Component>,
      "style": Object {
        "backgroundColor": "#fff",
        "opacity": 0.9,
        "padding": 10,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
                "padding": 5,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              >
                <Icon
                  allowFontScaling={false}
                  name="place"
                  size={14}
                />
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                title
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 10,
                  }
                }
              >
                desc
              </Text>
            </Component>
          </Component>,
          <Component
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              iconName="directions"
              onPress={[Function]}
              outline={true}
            />
            <Button
              iconName="location-off"
              onPress={[Function]}
              outline={true}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "iconName": "arrow-back",
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  <Icon
                    allowFontScaling={false}
                    name="place"
                    size={14}
                  />
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  title
                </Text>
              </Component>,
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc
                </Text>
              </Component>,
            ],
            "style": Object {
              "flex": 1,
              "padding": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "marginRight": 5,
                      }
                    }
                  >
                    <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    title
                  </Text>,
                ],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />,
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "marginRight": 5,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "allowFontScaling": false,
                      "name": "place",
                      "size": 14,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "title",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "fontSize": 14,
                    },
                  },
                  "ref": null,
                  "rendered": "title",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "desc",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 10,
                  },
                },
                "ref": null,
                "rendered": "desc",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Button
                iconName="directions"
                onPress={[Function]}
                outline={true}
              />,
              <Button
                iconName="location-off"
                onPress={[Function]}
                outline={true}
              />,
            ],
            "style": Object {
              "flexDirection": "row",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "directions",
                "onPress": [Function],
                "outline": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "location-off",
                "onPress": [Function],
                "outline": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Component
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />
          </Component>
          <Component
            style={
              Object {
                "flex": 1,
                "padding": 5,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              >
                <Icon
                  allowFontScaling={false}
                  name="place"
                  size={14}
                />
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                title
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 10,
                  }
                }
              >
                desc
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              iconName="directions"
              onPress={[Function]}
              outline={true}
            />
            <Button
              iconName="location-off"
              onPress={[Function]}
              outline={true}
            />
          </Component>
        </Component>,
        "style": Object {
          "backgroundColor": "#fff",
          "opacity": 0.9,
          "padding": 10,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Button
                iconName="arrow-back"
                onPress={[MockFunction]}
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 1,
                  "padding": 5,
                }
              }
            >
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  <Icon
                    allowFontScaling={false}
                    name="place"
                    size={14}
                  />
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  title
                </Text>
              </Component>
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc
                </Text>
              </Component>
            </Component>,
            <Component
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Button
                iconName="directions"
                onPress={[Function]}
                outline={true}
              />
              <Button
                iconName="location-off"
                onPress={[Function]}
                outline={true}
              />
            </Component>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Button
                iconName="arrow-back"
                onPress={[MockFunction]}
              />,
              "style": Object {
                "flex": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "arrow-back",
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Component
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "marginRight": 5,
                      }
                    }
                  >
                    <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    title
                  </Text>
                </Component>,
                <Component>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 10,
                      }
                    }
                  >
                    desc
                  </Text>
                </Component>,
              ],
              "style": Object {
                "flex": 1,
                "padding": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "marginRight": 5,
                        }
                      }
                    >
                      <Icon
                        allowFontScaling={false}
                        name="place"
                        size={14}
                      />
                    </Text>,
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "fontSize": 14,
                        }
                      }
                    >
                      title
                    </Text>,
                  ],
                  "style": Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": <Icon
                        allowFontScaling={false}
                        name="place"
                        size={14}
                      />,
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "marginRight": 5,
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "allowFontScaling": false,
                        "name": "place",
                        "size": 14,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "title",
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "fontSize": 14,
                      },
                    },
                    "ref": null,
                    "rendered": "title",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 10,
                      }
                    }
                  >
                    desc
                  </Text>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "desc",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "fontSize": 10,
                    },
                  },
                  "ref": null,
                  "rendered": "desc",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Button
                  iconName="directions"
                  onPress={[Function]}
                  outline={true}
                />,
                <Button
                  iconName="location-off"
                  onPress={[Function]}
                  outline={true}
                />,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconName": "directions",
                  "onPress": [Function],
                  "outline": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconName": "location-off",
                  "onPress": [Function],
                  "outline": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`reacts to marker changes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkerDetails
    marker={
      Object {
        "coordinates": Object {
          "latitude": 56.6,
          "longitude": 12.2,
        },
        "description": "desc 2",
        "id": "12",
        "title": "title 2",
      }
    }
    onClose={[MockFunction]}
    onRemove={[MockFunction]}
    onSetAsTarget={[MockFunction]}
    onSetAsWaypoint={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Component
          style={
            Object {
              "flex": 0,
            }
          }
        >
          <Button
            iconName="arrow-back"
            onPress={[MockFunction]}
          />
        </Component>
        <Component
          style={
            Object {
              "flex": 1,
              "padding": 5,
            }
          }
        >
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="place"
                size={14}
              />
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              title 2
            </Text>
          </Component>
          <Component>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 10,
                }
              }
            >
              desc 2
            </Text>
          </Component>
        </Component>
        <Component
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Button
            iconName="directions"
            onPress={[Function]}
            outline={true}
          />
          <Button
            iconName="location-off"
            onPress={[Function]}
            outline={true}
          />
        </Component>
      </Component>,
      "style": Object {
        "backgroundColor": "#fff",
        "opacity": 0.9,
        "padding": 10,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
                "padding": 5,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              >
                <Icon
                  allowFontScaling={false}
                  name="place"
                  size={14}
                />
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                title 2
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 10,
                  }
                }
              >
                desc 2
              </Text>
            </Component>
          </Component>,
          <Component
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              iconName="directions"
              onPress={[Function]}
              outline={true}
            />
            <Button
              iconName="location-off"
              onPress={[Function]}
              outline={true}
            />
          </Component>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "iconName": "arrow-back",
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  <Icon
                    allowFontScaling={false}
                    name="place"
                    size={14}
                  />
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  title 2
                </Text>
              </Component>,
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc 2
                </Text>
              </Component>,
            ],
            "style": Object {
              "flex": 1,
              "padding": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "marginRight": 5,
                      }
                    }
                  >
                    <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />
                  </Text>,
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    title 2
                  </Text>,
                ],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />,
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "marginRight": 5,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "allowFontScaling": false,
                      "name": "place",
                      "size": 14,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "title 2",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "fontSize": 14,
                    },
                  },
                  "ref": null,
                  "rendered": "title 2",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc 2
                </Text>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "desc 2",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 10,
                  },
                },
                "ref": null,
                "rendered": "desc 2",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Button
                iconName="directions"
                onPress={[Function]}
                outline={true}
              />,
              <Button
                iconName="location-off"
                onPress={[Function]}
                outline={true}
              />,
            ],
            "style": Object {
              "flexDirection": "row",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "directions",
                "onPress": [Function],
                "outline": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "location-off",
                "onPress": [Function],
                "outline": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Component
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <Button
              iconName="arrow-back"
              onPress={[MockFunction]}
            />
          </Component>
          <Component
            style={
              Object {
                "flex": 1,
                "padding": 5,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              >
                <Icon
                  allowFontScaling={false}
                  name="place"
                  size={14}
                />
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
              >
                title 2
              </Text>
            </Component>
            <Component>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 10,
                  }
                }
              >
                desc 2
              </Text>
            </Component>
          </Component>
          <Component
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              iconName="directions"
              onPress={[Function]}
              outline={true}
            />
            <Button
              iconName="location-off"
              onPress={[Function]}
              outline={true}
            />
          </Component>
        </Component>,
        "style": Object {
          "backgroundColor": "#fff",
          "opacity": 0.9,
          "padding": 10,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "flex": 0,
                }
              }
            >
              <Button
                iconName="arrow-back"
                onPress={[MockFunction]}
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 1,
                  "padding": 5,
                }
              }
            >
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  <Icon
                    allowFontScaling={false}
                    name="place"
                    size={14}
                  />
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                    }
                  }
                >
                  title 2
                </Text>
              </Component>
              <Component>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 10,
                    }
                  }
                >
                  desc 2
                </Text>
              </Component>
            </Component>,
            <Component
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Button
                iconName="directions"
                onPress={[Function]}
                outline={true}
              />
              <Button
                iconName="location-off"
                onPress={[Function]}
                outline={true}
              />
            </Component>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Button
                iconName="arrow-back"
                onPress={[MockFunction]}
              />,
              "style": Object {
                "flex": 0,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconName": "arrow-back",
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Component
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "marginRight": 5,
                      }
                    }
                  >
                    <Icon
                      allowFontScaling={false}
                      name="place"
                      size={14}
                    />
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 14,
                      }
                    }
                  >
                    title 2
                  </Text>
                </Component>,
                <Component>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 10,
                      }
                    }
                  >
                    desc 2
                  </Text>
                </Component>,
              ],
              "style": Object {
                "flex": 1,
                "padding": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "marginRight": 5,
                        }
                      }
                    >
                      <Icon
                        allowFontScaling={false}
                        name="place"
                        size={14}
                      />
                    </Text>,
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "fontSize": 14,
                        }
                      }
                    >
                      title 2
                    </Text>,
                  ],
                  "style": Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": <Icon
                        allowFontScaling={false}
                        name="place"
                        size={14}
                      />,
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "marginRight": 5,
                      },
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "allowFontScaling": false,
                        "name": "place",
                        "size": 14,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "title 2",
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "fontSize": 14,
                      },
                    },
                    "ref": null,
                    "rendered": "title 2",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 10,
                      }
                    }
                  >
                    desc 2
                  </Text>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "desc 2",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "fontSize": 10,
                    },
                  },
                  "ref": null,
                  "rendered": "desc 2",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Button
                  iconName="directions"
                  onPress={[Function]}
                  outline={true}
                />,
                <Button
                  iconName="location-off"
                  onPress={[Function]}
                  outline={true}
                />,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconName": "directions",
                  "onPress": [Function],
                  "outline": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconName": "location-off",
                  "onPress": [Function],
                  "outline": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
